Update plugin name

--- a/item-nbt-plugin/pom.xml
+++ b/item-nbt-plugin/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>item-nbt-parent</artifactId>
     <version>2.13.1</version>
   </parent>
-  <artifactId>item-nbt-api-plugin</artifactId>
+  <artifactId>Item-NBT-API-OG</artifactId>
   <packaging>jar</packaging>
   <dependencies>
     <dependency>
