--- a/item-nbt-plugin/src/main/resources/plugin.yml
+++ b/item-nbt-plugin/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 main: de.tr7zw.nbtapi.plugin.NBTAPI
-name: NBTAPI
+name: Item-NBT-API-OG
 version: ${project.version}
 author: tr7zw
 loadbefore: [ItemNBTAPI]
