--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,27 @@
       </resource>
     </resources>
     <plugins>
+      <!-- maven-antrun-plugin configuration -->
+      <plugin>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <version>3.1.0</version>
+        <inherited>false</inherited>
+        <executions>
+          <execution>
+            <id>copy-jar</id>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <phase>package</phase>
+            <configuration>
+              <target>
+                <copy file="${project.basedir}/item-nbt-plugin/target/Item-NBT-API-OG-${project.version}.jar" overwrite="true" todir="${project.build.directory}"></copy>
+              </target>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <!-- maven-compiler-plugin configuration -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -94,6 +115,7 @@
           <target>1.8</target>
         </configuration>
       </plugin>
+      <!-- maven-source-plugin configuration -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
@@ -107,6 +129,7 @@
           </execution>
         </executions>
       </plugin>
+      <!-- sortpom-maven-plugin configuration -->
       <plugin>
         <groupId>com.github.ekryd.sortpom</groupId>
         <artifactId>sortpom-maven-plugin</artifactId>
@@ -120,6 +143,7 @@
           </execution>
         </executions>
       </plugin>
+      <!-- license-maven-plugin configuration -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>license-maven-plugin</artifactId>
@@ -130,6 +154,7 @@
           <force>true</force>
         </configuration>
       </plugin>
+      <!-- no-jitpack-maven-plugin configuration -->
       <plugin>
         <groupId>dev.tr7zw.nojitpack.maven</groupId>
         <artifactId>no-jitpack-maven-plugin</artifactId>
@@ -143,6 +168,7 @@
           </execution>
         </executions>
       </plugin>
+      <!-- spotless-maven-plugin configuration -->
       <plugin>
         <groupId>com.diffplug.spotless</groupId>
         <artifactId>spotless-maven-plugin</artifactId>
@@ -158,18 +184,15 @@
             </format>
           </formats>
           <markdown>
-            <includes> <!-- You have to set the target manually -->
+            <includes>
               <include>**/*.md</include>
             </includes>
             <excludes>
               <exclude>target/**</exclude>
             </excludes>
-        
-            <flexmark/> <!-- has its own section below -->
+            <flexmark></flexmark>
           </markdown>
-          <!-- define a language-specific format -->
           <java>
-            <!-- no need to specify files, inferred automatically, but you can if you want -->
             <excludes>
               <exclude>Metrics.java</exclude>
             </excludes>
@@ -179,7 +202,6 @@
             <eclipse>
               <file>formatter.xml</file>
             </eclipse>
-
           </java>
         </configuration>
         <executions>
